Directive structurelle et par attribue

--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -1,4 +1,4 @@
-  <div class="face-snap-card">
+  <div class="face-snap-card" [ngClass]="{snapped: buttonText === 'Oops, onSnap!'}">
     <h2>{{ faceSnap.title }}</h2>
     <p> Mise en ligne le {{faceSnap.createDate }} </p>
     <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
@@ -6,7 +6,7 @@
     <p *ngIf="faceSnap.location">photo prise à {{ faceSnap.location }} </p>
     <p>
       <button (click)="onSnap()">{{ buttonText }}</button>
-       {{ faceSnap.snaps }} 
+      <span [ngStyle]="{color: 'rgb(0, '+ faceSnap.snaps +', 0)'}" >{{ faceSnap.snaps }}</span>   
     </p>
     
   </div>
