--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,7 @@
 <header>
     <h1>FaceSnap</h1>
+    <nav>
+        <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
+        <a routerLink="facesnaps" routerLinkActive="ctive">faceSnaps</a>
+    </nav>
 </header>
