--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,21 @@ body{
     padding: 0;
     box-sizing: border-box;
 }
+
+button{
+    background-color: transparent;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 32px;
+    cursor: pointer;
+    padding: 5px 10px;
+    box-shadow: lightgray 3px 3px 7px;
+    margin-left: 20px;
+    outline: none;
+    font-size: 14px;
+    font-weight: 500;
+    &:active{
+        transform: translate(1px, 1px);
+        box-shadow: lightgray 0 0 5px;
+    }
+}
